kubernetes/services/ollama/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: ollama
  labels:
    app: ollama
    type: ai
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/enforce-version: latest
    pod-security.kubernetes.io/audit: baseline
    pod-security.kubernetes.io/warn: baseline
